# GCMMCPAgent

./: .env.example  .gitignore  .secrets.baseline  AGENTS.md  CHANGELOG.md  CVE_LANGSMITH_UPGRADE_ANALYSIS.md  ENABLE_DEBUG_LOGGING.md  EXECUTE_TOOL_ERRORS_ANALYSIS.md  GCM_MCP_SERVER_EXECUTE_TOOL_BUG_REPORT.md  LICENSE  README.md  SSL_BYPASS_FIX.md  WATSONXORCH_IMPORT_GUIDE.md  WATSONX_ORCHESTRATE_VALIDATION_ISSUE.md  api-authentication.txt  app.py  extract_ip_to_csv.py  pyproject.toml  requirements.txt  setup.py  test_execute_tool_errors.py  test_execute_tool_fix_unit.py  test_gcm_hostname_fix.py  test_logging.py  test_max_iterations_fix.py  test_param_unwrapping.py  test_parameter_defaults.py  test_ssl_bypass_fix.py  test_ssl_bypass_import_order.py  test_ui_only.py  verify_config_system.py  verify_mcp_integration.py
docs/: BuildingagentsforIBMGuardiumCryptographyManagerusinginbuiltMCPserver-IBMDocumentation.md  CHANGELOG.md  CHAT_UI_REFACTORING.md  GCM_MCP_SERVER_COMPARISON_REPORT.md  IMPLEMENTATION_PLAN.md  JSON_PARSING_ERROR_FIX.md  KEYCLOAK_AUTH_REFACTORING.md  PARAMETER_FIX_DOCUMENTATION.md  PHASE1_COMPLETION_SUMMARY.md  PHASE2_COMPLETION_SUMMARY.md  PHASE3_COMPLETION_SUMMARY.md  PHASE4_COMPLETION_SUMMARY.md  PHASE4_IMPLEMENTATION_PLAN.md  PROMPT_OPTIMIZATION.md  QUERY_INDEPENDENCE_FIX.md  SETUP.md  SSL_BYPASS_MCP_SERVER_ISSUE.md  STABILITY_OPTIMIZATION_ANALYSIS.md  TABLE_FORMATTER_FIX.md  TABLE_FORMATTER_MULTI_TABLE_FIX.md  TABLE_FORMATTING.md  TROUBLESHOOTING.md  USER_GUIDE.md  UsingdynamictoolwithIBMGuardiumCryptographyManagerMCPServer-IBMDocumentation.md  ip_addresses.csv
docs/architecture/: GCM-Agent-Architecture.md
gcm_agent/: __init__.py
gcm_agent/agent/: __init__.py  gcm_agent.py  gcm_prompts.md  prompts.py
gcm_agent/auth/: __init__.py  api_key_auth.py  gcm_auth.py  keycloak_auth.py
gcm_agent/config/: __init__.py  config_manager.py  storage.py
gcm_agent/mcp/: __init__.py  client.py  tool_analytics.py  tool_loader.py
gcm_agent/ui/: __init__.py  chat_ui.py  config_ui.py  debug_ui.py
gcm_agent/utils/: __init__.py  logger.py  table_formatter.py
tests/: __init__.py  test_agent.py  test_auth.py  test_auth_header_logging.py  test_chat_ui_refactoring.py  test_config.py  test_debug_ui_integration.py  test_execute_tool_fix.py  test_gcm_hostname_fix.py  test_json_parsing_error.py  test_keycloak_ssl_bypass_fix.py  test_mcp.py  test_multi_table_detection.py  test_observability.py  test_ssl_bypass.py  test_ssl_bypass_fix.py  test_ssl_bypass_verification.py  test_table_formatter.py  test_table_formatter_fix.py  test_table_formatter_smart_detection.py  test_tool_analytics.py  test_tool_loader_phase3.py  test_tuple_result_fix.py  test_ui.py
watsonxorch/: .env.example  Dockerfile  INSTALL.md  MANIFEST.in  README.md  __init__.py  adapter.py  agent.yaml  api.py  config.py  example_client.py  k8s-deployment.yaml  models.py  pyproject.toml  requirements.txt  run_server.py  setup.py  test_orchestrate.py
