[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gcm-agent"
version = "0.9.6"
description = "LangChain-based agent for IBM Guardium Cryptography Manager MCP integration."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "Project Maintainers" }
]
dependencies = [
  "langchain>=0.1.0",
  "langchain-mcp-adapters>=0.1.0",
  "langgraph>=0.0.40",
  "langchain-ibm>=0.1.0",
  "httpx>=0.25.0",
  "keyring>=24.0.0",
  "gradio>=4.0.0",
  "pydantic>=2.0.0",
  "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.21.0"
]

[tool.setuptools.packages.find]
include = ["gcm_agent*"]