# Modern Python packaging configuration
# Made with Bob
# 2026-06-10 02:54 UTC - Package build configuration

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "watsonxorch"
version = "1.0.0"
description = "WatsonX Orchestrate integration for IBM Guardium Cryptography Manager Agent"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "GCM Agent Team", email = "support@example.com"}
]
keywords = ["watsonx", "orchestrate", "gcm", "guardium", "cryptography", "ibm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

dependencies = [
    "langchain>=0.1.0",
    "langchain-core",
    "langgraph>=0.0.40",
    "langchain-ibm>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-mcp-adapters>=0.1.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "pydantic-settings",
    "python-dotenv>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "cryptography>=41.0.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
watsonxorch-server = "watsonxorch.run_server:main"

[project.urls]
Homepage = "https://github.com/your-org/gcm-agent"
Documentation = "https://github.com/your-org/gcm-agent/blob/main/watsonxorch/README.md"
Repository = "https://github.com/your-org/gcm-agent"
Issues = "https://github.com/your-org/gcm-agent/issues"

[tool.setuptools]
packages = ["watsonxorch"]

[tool.setuptools.package-data]
watsonxorch = ["*.yaml", "*.yml", ".env.example"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["test_orchestrate.py"]
asyncio_mode = "auto"